# colmap_scaler

./: .gitignore  LICENSE  README.md  pyproject.toml
src/colmap_scaler/: __init__.py  cli.py  config.py  detector.py  pipeline.py  scale_estimator.py  scaler.py  triangulator.py  utils.py
