[project]
name = "colmap-scaler"
version = "0.1.0"
description = "Rescale COLMAP reconstructions using fiducial markers"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "opencv-contrib-python>=4.12.0.88",
    "pycolmap>=3.12.6",
    "numpy>=1.24.0",
    "tyro>=0.8.0",
]

[project.scripts]
colmap-scaler = "colmap_scaler.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
